--- a/docs/styles.css
+++ b/docs/styles.css
@@ -53,6 +53,16 @@ nav .right a span {
   margin-left: 5px;
 }
 
+nav .right a {
+  color: var(--text-color);
+  margin: 0 10px;
+  transition: color 0.3s; 
+}
+
+nav .right a:hover {
+  color: var(--link-color);
+}
+
 /* Section : Main Content */
 
 .section__container{
